--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <html>
-        <body>Test.</body>
+<head>
+    <title>Cookie Run Spine Animations</title>
+</head>
+<body>
+    <p>Welcome to my twisted mind.</p>
+</body>
 </html>
