--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Cookie Run Spine Animations</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <p>Welcome to my twisted mind.</p>
