--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="topnav">
+        <a class="active" href="./">Home</a>
+        <a href="./wars.html">Cookie Wars</a>
+        <a href="./match3.html">Puzzle World</a>
+        <a href="./kingdom.html">Kingdom</a>
+    </div>
     <p>Welcome to my twisted mind.</p>
 </body>
 </html>
