for the love of god

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div class="topnav">
-        <a class="active" href="./">Home</a>
-        <a href="./wars.html">Cookie Wars</a>
-        <a href="./match3.html">Puzzle World</a>
-        <a href="./kingdom.html">Kingdom</a>
-    </div>
+    <ul class="topnav">
+        <li><a class="active" href="./">Home</a></li>
+        <li><a href="./wars.html">Cookie Wars</a></li>
+        <li><a href="./match3.html">Puzzle World</a></li>
+        <li><a href="./kingdom.html">Kingdom</a></li>
+    </ul>
     <p>Welcome to my twisted mind.</p>
 </body>
 </html>
