--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <ul class="topnav">
+    <ul>
         <li><a class="active" href="./">Home</a></li>
         <li><a href="./wars.html">Cookie Wars</a></li>
         <li><a href="./match3.html">Puzzle World</a></li>
         <li><a href="./kingdom.html">Kingdom</a></li>
+        <li><a href="./faq.html">FAQ</a></li>
     </ul>
     <p>Welcome to my twisted mind.</p>
 </body>
