--- a/match3.html
+++ b/match3.html
@@ -6,12 +6,12 @@
 </head>
 <body>
     <ul>
-        <li><a class="active" href="./">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="./wars.html">Cookie Wars</a></li>
-        <li><a href="./match3.html">Puzzle World</a></li>
+        <li><a class="active" href="./">Puzzle World</a></li>
         <li><a href="./kingdom.html">Kingdom</a></li>
         <li><a href="./faq.html">FAQ</a></li>
     </ul>
-    <p>Welcome to my twisted mind. I hate forgetting how to make websites.</p>
+    <p>I hate match-3 games, honestly. It's all just luck!</p>
 </body>
 </html>
