--- a/faq.html
+++ b/faq.html
@@ -13,5 +13,12 @@
         <li><a class="active" href="./">FAQ</a></li>
     </ul>
     <p>I haven't actually been asked any questions yet. This is pre-emptive.</p>
+    <h1>What is this?</h1>
+    <p>Essentially, a collection of all of the animations from various Cookie Run games that utilize the game development software Spine. (This is every modern game, aside from Ovenbreak.) I'm putting this all together on a simple page so that Twitter compression stops kicking my ass/APNGs will work properly/etc.</p>
+    <h1>What's up with filetypes?</h1>
+    <p>So, the main preview that will show up on the website is .webm, which I'm converting from .apng. This is for sake of fast loading/smaller file sizes, as .apng is lossless. I'm not using GIF due to it only allowing 8-bit transparency, which Spine doens't really like in the exportation process.</p>
+    <p>I still have to decide how exactly I want to handle everything, yet, but if there's enough demand, I'll put up the .apng downloads. There's tools out there to take them apart frame-by-frame.</p>
+    <h1>Symphogear?</h1>
+    <p>I'm hosting this with the help of some of my collueges at YameteTomete. I'm hoping to host Symphogear XD Unlimited animations in a similar fashion...somewhere. Check back in later.</p>
 </body>
 </html>
