--- a/kingdom.html
+++ b/kingdom.html
@@ -12,6 +12,6 @@
         <li><a class="active" href="./">Kingdom</a></li>
         <li><a href="./faq.html">FAQ</a></li>
     </ul>
-    <p>I hate match-3 games, honestly. It's all just luck!</p>
+    <p>Now with voice acting.</p>
 </body>
 </html>
